more store filter work

--- a/upload/admin/view/template/catalog/information.twig
+++ b/upload/admin/view/template/catalog/information.twig
@@ -70,5 +70,15 @@ $('#list').on('click', 'thead a, .pagination a', function(e) {
 
     $('#list').load(this.href);
 });
+
+$('#form-filter').on('submit', function(e) {
+    e.preventDefault();
+
+    let url = $(this).serialize();
+
+    window.history.pushState({}, null, 'index.php?route=catalog/information&user_token={{ user_token }}&' + url);
+
+    $('#list').load('index.php?route=catalog/information.list&user_token={{ user_token }}&' + url);
+});
 //--></script>
 {{ footer }}
