--- a/upload/admin/view/template/design/theme.twig
+++ b/upload/admin/view/template/design/theme.twig
@@ -33,7 +33,8 @@
           <div class="card-body">
             <form id="form-filter">
               <div class="mb-3">
-                <label for="input-store" class="form-label">{{ entry_store }}</label> <select name="filter_store_id" id="input-store" class="form-select">
+                <label for="input-store" class="form-label">{{ entry_store }}</label>
+                <select name="filter_store_id" id="input-store" class="form-select">
                   <option value=""></option>
                   {% for store in stores %}
                     <option value="{{ store.store_id }}"{% if store.store_id == filter_store_id %} selected{% endif %}>{{ store.name }}</option>
