--- a/upload/admin/view/template/marketing/contact.twig
+++ b/upload/admin/view/template/marketing/contact.twig
@@ -238,44 +238,63 @@ $('textarea[data-oc-toggle=\'ckeditor\']').ckeditor({
 $('#button-send').on('click', function() {
     var element = this;
 
+    $(element).button('loading');
+
     for (instance in CKEDITOR.instances) {
         CKEDITOR.instances[instance].updateElement();
     }
 
-    $.ajax({
-        url: 'index.php?route=marketing/contact.send&user_token={{ user_token }}',
-        type: 'post',
-        data: $('#content form').serialize(),
-        dataType: 'json',
-        beforeSend: function() {
-            $(element).button('loading');
-        },
-        complete: function() {
-            $(element).button('reset');
-        },
-        success: function(json) {
-            $('.alert-dismissible').remove();
-            $('.invalid-feedback').removeClass('d-block');
+    var next = 'index.php?route=marketing/contact.send&user_token={{ user_token }}';
 
-            if (json['error']) {
-                if (json['error']['warning']) {
-                    $('#alert').prepend('<div class="alert alert-danger alert-dismissible"><i class="fa-solid fa-circle-exclamation"></i> ' + json['error']['warning'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
+    var send = function() {
+        return $.ajax({
+            url: next,
+            type: 'post',
+            data: $('#content form').serialize(),
+            dataType: 'json',
+            success: function(json) {
+                console.log(json);
+
+                $('.invalid-feedback').removeClass('d-block');
+
+                if (json['error']) {
+                    if (json['error']['warning']) {
+                        $('#alert').prepend('<div class="alert alert-danger alert-dismissible"><i class="fa-solid fa-circle-exclamation"></i> ' + json['error']['warning'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
+                    }
+
+                    for (key in json['error']) {
+                        $('#input-' + key.replaceAll('_', '-')).addClass('is-invalid').find('.form-control, .form-select, .form-check-input, .form-check-label').addClass('is-invalid');
+                        $('#error-' + key.replaceAll('_', '-')).html(json['error'][key]).addClass('d-block');
+                    }
+
+                    $(element).button('reset');
                 }
 
-                for (key in json['error']) {
-                    $('#input-' + key.replaceAll('_', '-')).addClass('is-invalid').find('.form-control, .form-select, .form-check-input, .form-check-label').addClass('is-invalid');
-                    $('#error-' + key.replaceAll('_', '-')).html(json['error'][key]).addClass('d-block');
+                if (json['text']) {
+                    $('#alert').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle-circle"></i> ' + json['text'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
                 }
-            }
 
-            if (json['success']) {
-                $('#alert').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle"></i> ' + json['success'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
+                if (json['success']) {
+                    $('#alert').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle-circle"></i> ' + json['success'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
+
+                    $(element).button('reset');
+                }
+
+                if (json['next']) {
+                    next = json['next'];
+
+                    chain.attach(send);
+                }
+            },
+            error: function(xhr, ajaxOptions, thrownError) {
+                console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+
+                $(element).button('reset');
             }
-        },
-        error: function(xhr, ajaxOptions, thrownError) {
-            console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-        }
-    });
+        });
+    };
+
+    chain.attach(send);
 });
 //--></script>
 {{ footer }}
