--- a/upload/admin/view/template/customer/customer_form.twig
+++ b/upload/admin/view/template/customer/customer_form.twig
@@ -217,14 +217,14 @@
                 <div class="row mb-3">
                   <label for="input-password" class="col-sm-2 col-form-label">{{ entry_password }}</label>
                   <div class="col-sm-10">
-                    <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" required autocomplete="new-password"/>
+                    <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control"{% if not customer_id %} required{% endif %} autocomplete="new-password"/>
                     <div id="error-password" class="invalid-feedback"></div>
                   </div>
                 </div>
                 <div class="row mb-3">
                   <label for="input-confirm" class="col-sm-2 col-form-label">{{ entry_confirm }}</label>
                   <div class="col-sm-10">
-                    <input type="password" name="confirm" value="{{ confirm }}" placeholder="{{ entry_confirm }}" id="input-confirm" class="form-control" required autocomplete="new-password"/>
+                    <input type="password" name="confirm" value="{{ confirm }}" placeholder="{{ entry_confirm }}" id="input-confirm" class="form-control"{% if not customer_id %} required{% endif %} autocomplete="new-password"/>
                     <div id="error-confirm" class="invalid-feedback"></div>
                   </div>
                 </div>
