altered upload system settings to be hard coded. also altering images to use less code.

--- a/upload/admin/view/template/setting/store_form.twig
+++ b/upload/admin/view/template/setting/store_form.twig
@@ -23,7 +23,6 @@
             <li class="nav-item"><a href="#tab-store" data-bs-toggle="tab" class="nav-link">{{ tab_store }}</a></li>
             <li class="nav-item"><a href="#tab-local" data-bs-toggle="tab" class="nav-link">{{ tab_local }}</a></li>
             <li class="nav-item"><a href="#tab-option" data-bs-toggle="tab" class="nav-link">{{ tab_option }}</a></li>
-            <li class="nav-item"><a href="#tab-image" data-bs-toggle="tab" class="nav-link">{{ tab_image }}</a></li>
           </ul>
           <div class="tab-content">
             <div id="tab-general" class="tab-pane active">
@@ -299,6 +298,42 @@
                   </div>
                 </div>
                 <div class="accordion-item">
+                  <h2 class="accordion-header"><button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapse-image">{{ text_image }}</button></h2>
+                  <div id="collapse-image" class="accordion-collapse collapse" data-bs-parent="#accordion-option">
+                    <div class="accordion-body">
+                      <div class="row mb-3">
+                        <label for="input-image-thumb-width" class="col-sm-2 col-form-label">{{ entry_image_thumb }}</label>
+                        <div class="col-sm-10">
+                          <div id="input-image-thumb" class="row">
+                            <div class="col-sm-6">
+                              <input type="text" name="config_image_thumb_width" value="{{ config_image_thumb_width }}" placeholder="{{ entry_width }}" id="input-image-thumb-width" class="form-control" required/>
+                            </div>
+                            <div class="col-sm-6">
+                              <input type="text" name="config_image_thumb_height" value="{{ config_image_thumb_height }}" placeholder="{{ entry_height }}" id="input-image-thumb-height" class="form-control" required/>
+                            </div>
+                          </div>
+                          <div id="error-image-thumb" class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                      <div class="row mb-3">
+                        <label for="input-image-popup-width" class="col-sm-2 col-form-label">{{ entry_image_popup }}</label>
+                        <div class="col-sm-10">
+                          <div id="input-image-popup" class="row">
+                            <div class="col-sm-6">
+                              <input type="text" name="config_image_popup_width" value="{{ config_image_popup_width }}" placeholder="{{ entry_width }}" id="input-image-popup-width" class="form-control" required/>
+                            </div>
+                            <div class="col-sm-6">
+                              <input type="text" name="config_image_popup_height" value="{{ config_image_popup_height }}" placeholder="{{ entry_height }}" id="input-image-popup-height" class="form-control" required/>
+                            </div>
+                          </div>
+                          <div id="error-image-popup" class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="accordion-item">
                   <h2 class="accordion-header"><button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapse-legal">{{ text_legal }}</button></h2>
                   <div id="collapse-legal" class="accordion-collapse collapse" data-bs-parent="#accordion-option">
                     <div class="accordion-body">
@@ -469,179 +504,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div id="tab-image" class="tab-pane">
-              <fieldset>
-                <legend>{{ text_image }}</legend>
-                <div class="row mb-3">
-                  <label for="input-image-category-width" class="col-sm-2 col-form-label">{{ entry_image_category }}</label>
-                  <div class="col-sm-10">
-                    <div id="input-image-category" class="row">
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_category_width" value="{{ config_image_category_width }}" placeholder="{{ entry_width }}" id="input-image-category-width" class="form-control" required/>
-                      </div>
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_category_height" value="{{ config_image_category_height }}" placeholder="{{ entry_height }}" id="input-image-category-height" class="form-control" required/>
-                      </div>
-                    </div>
-                    <div id="error-image-category" class="invalid-feedback"></div>
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="input-image-thumb-width" class="col-sm-2 col-form-label">{{ entry_image_thumb }}</label>
-                  <div class="col-sm-10">
-                    <div id="input-image-thumb" class="row">
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_thumb_width" value="{{ config_image_thumb_width }}" placeholder="{{ entry_width }}" id="input-image-thumb-width" class="form-control" required/>
-                      </div>
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_thumb_height" value="{{ config_image_thumb_height }}" placeholder="{{ entry_height }}" id="input-image-thumb-height" class="form-control" required/>
-                      </div>
-                    </div>
-                    <div id="error-image-thumb" class="invalid-feedback"></div>
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="input-image-popup-width" class="col-sm-2 col-form-label">{{ entry_image_popup }}</label>
-                  <div class="col-sm-10">
-                    <div id="input-image-popup" class="row">
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_popup_width" value="{{ config_image_popup_width }}" placeholder="{{ entry_width }}" id="input-image-popup-width" class="form-control" required/>
-                      </div>
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_popup_height" value="{{ config_image_popup_height }}" placeholder="{{ entry_height }}" id="input-image-popup-height" class="form-control" required/>
-                      </div>
-                    </div>
-                    <div id="error-image-popup" class="invalid-feedback"></div>
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="input-image-product-width" class="col-sm-2 col-form-label">{{ entry_image_product }}</label>
-                  <div class="col-sm-10">
-                    <div id="input-image-product" class="row">
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_product_width" value="{{ config_image_product_width }}" placeholder="{{ entry_width }}" id="input-image-product-width" class="form-control" required/>
-                      </div>
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_product_height" value="{{ config_image_product_height }}" placeholder="{{ entry_height }}" id="input-image-product-height" class="form-control" required/>
-                      </div>
-                    </div>
-                    <div id="error-image-product" class="invalid-feedback"></div>
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="input-image-additional-width" class="col-sm-2 col-form-label">{{ entry_image_additional }}</label>
-                  <div class="col-sm-10">
-                    <div id="input-image-additional" class="row">
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_additional_width" value="{{ config_image_additional_width }}" placeholder="{{ entry_width }}" id="input-image-additional-width" class="form-control" required/>
-                      </div>
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_additional_height" value="{{ config_image_additional_height }}" placeholder="{{ entry_height }}" id="input-image-additional-height" class="form-control" required/>
-                      </div>
-                    </div>
-                    <div id="error-image-additional" class="invalid-feedback"></div>
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="input-image-related-width" class="col-sm-2 col-form-label">{{ entry_image_related }}</label>
-                  <div class="col-sm-10">
-                    <div id="input-image-related" class="row">
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_related_width" value="{{ config_image_related_width }}" placeholder="{{ entry_width }}" id="input-image-related-width" class="form-control" required/>
-                      </div>
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_related_height" value="{{ config_image_related_height }}" placeholder="{{ entry_height }}" id="input-image-related-height" class="form-control" required/>
-                      </div>
-                    </div>
-                    <div id="error-image-related" class="invalid-feedback"></div>
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="input-image-article-width" class="col-sm-2 col-form-label">{{ entry_image_article }}</label>
-                  <div class="col-sm-10">
-                    <div id="input-image-article" class="row">
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_article_width" value="{{ config_image_article_width }}" placeholder="{{ entry_width }}" id="input-image-article-width" class="form-control" required/>
-                      </div>
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_article_height" value="{{ config_image_article_height }}" placeholder="{{ entry_height }}" id="input-image-article-height" class="form-control" required/>
-                      </div>
-                    </div>
-                    <div id="error-image-article" class="invalid-feedback"></div>
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="input-image-topic-width" class="col-sm-2 col-form-label">{{ entry_image_topic }}</label>
-                  <div class="col-sm-10">
-                    <div id="input-image-topic" class="row">
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_topic_width" value="{{ config_image_topic_width }}" placeholder="{{ entry_width }}" id="input-image-topic-width" class="form-control" required/>
-                      </div>
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_topic_height" value="{{ config_image_topic_height }}" placeholder="{{ entry_height }}" id="input-image-topic-height" class="form-control" required/>
-                      </div>
-                    </div>
-                    <div id="error-image-topic" class="invalid-feedback"></div>
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="input-image-compare-width" class="col-sm-2 col-form-label">{{ entry_image_compare }}</label>
-                  <div class="col-sm-10">
-                    <div id="input-image-compare" class="row">
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_compare_width" value="{{ config_image_compare_width }}" placeholder="{{ entry_width }}" id="input-image-compare-width" class="form-control" required/>
-                      </div>
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_compare_height" value="{{ config_image_compare_height }}" placeholder="{{ entry_height }}" id="input-image-compare-height" class="form-control" required/>
-                      </div>
-                    </div>
-                    <div id="error-image-compare" class="invalid-feedback"></div>
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="input-image-wishlist-width" class="col-sm-2 col-form-label">{{ entry_image_wishlist }}</label>
-                  <div class="col-sm-10">
-                    <div id="input-image-wishlist" class="row">
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_wishlist_width" value="{{ config_image_wishlist_width }}" placeholder="{{ entry_width }}" id="input-image-wishlist-width" class="form-control" required/>
-                      </div>
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_wishlist_height" value="{{ config_image_wishlist_height }}" placeholder="{{ entry_height }}" id="input-image-wishlist-height" class="form-control" required/>
-                      </div>
-                    </div>
-                    <div id="error-image-wishlist" class="invalid-feedback"></div>
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="input-image-cart-width" class="col-sm-2 col-form-label">{{ entry_image_cart }}</label>
-                  <div class="col-sm-10">
-                    <div id="input-image-cart" class="row">
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_cart_width" value="{{ config_image_cart_width }}" placeholder="{{ entry_width }}" id="input-image-cart-width" class="form-control" required/>
-                      </div>
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_cart_height" value="{{ config_image_cart_height }}" placeholder="{{ entry_height }}" id="input-image-cart-height" class="form-control" required/>
-                      </div>
-                    </div>
-                    <div id="error-image-cart" class="invalid-feedback"></div>
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="input-image-location-width" class="col-sm-2 col-form-label">{{ entry_image_location }}</label>
-                  <div class="col-sm-10">
-                    <div id="input-image-location" class="row">
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_location_width" value="{{ config_image_location_width }}" placeholder="{{ entry_width }}" id="input-image-location-width" class="form-control" required/>
-                      </div>
-                      <div class="col-sm-6">
-                        <input type="text" name="config_image_location_height" value="{{ config_image_location_height }}" placeholder="{{ entry_height }}" id="input-image-location-height" class="form-control" required/>
-                      </div>
-                    </div>
-                    <div id="error-image-location" class="invalid-feedback"></div>
-                  </div>
-                </div>
-              </fieldset>
             </div>
           </div>
           <input type="hidden" name="store_id" value="{{ store_id }}" id="input-store-id"/></form>
