--- a/upload/catalog/view/template/information/contact.twig
+++ b/upload/catalog/view/template/information/contact.twig
@@ -20,9 +20,7 @@
               <address>
                 {{ address }}
               </address>
-              {% if geocode %}
-                <a href="https://maps.google.com/maps?q={{ geocode|url_encode }}&hl={{ geocode_hl }}&t=m&z=15" target="_blank" class="btn btn-info"><i class="fa-solid fa-location-dot"></i> {{ button_map }}</a>
-              {% endif %}
+              <a href="https://maps.google.com/maps?q={{ geocode|url_encode }}&hl={{ language }}&t=m&z=15" target="_blank" class="btn btn-info"><i class="fa-solid fa-location-dot"></i> {{ button_map }}</a>
             </div>
             {% if telephone %}
               <div class="col-sm-3"><strong>{{ text_telephone }}</strong>
@@ -70,7 +68,7 @@
                         {{ location.address }}
                       </address>
                       {% if location.geocode %}
-                        <a href="https://maps.google.com/maps?q={{ location.geocode|url_encode }}&hl={{ geocode_hl }}&t=m&z=15" target="_blank" class="btn btn-outline-secondary"><i class="fa-solid fa-location-dot"></i> {{ button_map }}</a>
+                        <a href="https://maps.google.com/maps?q={{ location.geocode|url_encode }}&hl={{ language }}&t=m&z=15" target="_blank" class="btn btn-outline-secondary"><i class="fa-solid fa-location-dot"></i> {{ button_map }}</a>
                       {% endif %}
                     </div>
                     <div class="col-sm-3"><strong>{{ text_telephone }}</strong>
