--- a/upload/catalog/view/template/product/category.twig
+++ b/upload/catalog/view/template/product/category.twig
@@ -11,7 +11,7 @@
       {% if image or description %}
         <div class="row">
           {% if image %}
-            <div class="col-3"><img src="{{ image }}" alt="{{ heading_title }}" title="{{ heading_title }}" class="img-thumbnail"/></div>
+            <div class="col-3"><img src="{{ image }}" alt="{{ heading_title }}" title="{{ heading_title }}" class="img-thumbnail" style="width: 268px"/></div>
           {% endif %}
           {% if description %}
             <div class="col-9">{{ description }}</div>
