--- a/upload/catalog/view/template/product/product.twig
+++ b/upload/catalog/view/template/product/product.twig
@@ -18,7 +18,7 @@
               {% if images %}
                 <div>
                   {% for image in images %}
-                    <a href="{{ image.popup }}" title="{{ heading_title }}"><img src="{{ image.thumb }}" title="{{ heading_title }}" alt="{{ heading_title }}" class="img-thumbnail"/></a>&nbsp;
+                    <a href="{{ image.popup }}" title="{{ heading_title }}"><img src="{{ image.thumb }}" title="{{ heading_title }}" alt="{{ heading_title }}" class="img-thumbnail" style="width: 74px"/></a>&nbsp;
                   {% endfor %}
                 </div>
               {% endif %}
